--- a/modulo4.ipynb
+++ b/modulo4.ipynb
@@ -655,7 +655,504 @@
     "\n",
     "Vimos que las listas son elementos mutables (se pueden modificar) y almacenas una **secuencia de valores**, existen otros elementos que pueden almacenar secuencias como las **TUPLAS** y **DICCIONARIOS**, ambos tienen caracteristicas muy distintas a las listas por lo que veremos cada uno en detalle:\n",
     "\n",
-    "**TUPLAS**"
+    "**TUPLAS** Las tuplas son secuencias de valores *inmutables*, se diferencian de las listas por sintaxis ya que se crean con paréntesis no con corchetes, aunque tambien es posible crearlas sin necesidad de los paréntesis, aunque usarlos es una buena práctica. Cada elemento de una tupla debe estar separado por coma, sino el programa interpreta que dos o más elementos son uno solo\n",
+    "\n",
+    "``tup1 = (1, 2, 3, 4, 5)`` 5 elementos\n",
+    "\n",
+    "``tup2 = (1 2 3, 4 5)`` 2 elementos\n",
+    "\n",
+    "Las tuplas utilizan el mismo sistema de índices que las listas, y para poder leer un elemento en una tupla podemos llamarlos de la misma manera:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1000\n",
+      "(10, 100, 1000)\n",
+      "(1, 10)\n",
+      "1\n",
+      "10\n",
+      "100\n",
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_tuple = (1, 10, 100, 1000)\n",
+    "\n",
+    "print(my_tuple[0])\n",
+    "print(my_tuple[-1])\n",
+    "print(my_tuple[1:])\n",
+    "print(my_tuple[:-2])\n",
+    "\n",
+    "for elem in my_tuple:\n",
+    "    print(elem)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sin embargo, como mencionamos al principio, las tuplas son inmutables, es decir no pueen ser modificadas una vez creadas, por lo tanto no son compatibles con los métodos que estudiamos para listas como ``.insert()`` o ``.append()``, o instrucciones como ``del``, si intentamos eleiminar un elemento de una tupla usando ``del`` nos dara un error.\n",
+    "\n",
+    "Sin embargo, sí podemos interactuar con éstas, podemos conocer la posicion de sus elementos, el tamaño, etc. Podemos utilizar tuplas para crear listas u otras tuplas uniendo una o más:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "(1, 10, 100, 1000, 10000)\n",
+      "(1, 10, 100, 1, 10, 100, 1, 10, 100)\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_tuple = (1, 10, 100)\n",
+    "\n",
+    "t1 = my_tuple + (1000, 10000)\n",
+    "t2 = my_tuple * 3\n",
+    "\n",
+    "print(len(t2))\n",
+    "print(t1)\n",
+    "print(t2)\n",
+    "print(10 in my_tuple)\n",
+    "print(-10 not in my_tuple)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tambien son compatibles con los operadores de asignacion, tal cual como vimos con listas:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2,) (3, 123) (1,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "var = 123\n",
+    "\n",
+    "t1 = (1, )\n",
+    "t2 = (2, )\n",
+    "t3 = (3, var)\n",
+    "\n",
+    "t1, t2, t3 = t2, t3, t1\n",
+    "\n",
+    "print(t1, t2, t3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Otra funcion importante con tuplas es que se pueden \"desempaquetar\", es decir se le puede asignar una variable a cada elemento de la tupla utilizando el operador ``=``:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "tup = (4, 5, 6)\n",
+    "a, b, c = tup\n",
+    "\n",
+    "print(a + c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**DICCIONARIOS** El diccionario es otro tipo de estructura de datos de Python. No es una secuencia (pero puede adaptarse fácilmente a un procesamiento secuencial) y además es mutable.\n",
+    "\n",
+    "Los diccionarios almacenan **pares de datos** de forma **key-value**, tanto las claves como los valores pueden ser valores o cadenas de cualquier tipo.\n",
+    "\n",
+    "Los diccionarios se crean utilizando llaver **{}** y **:** entre clave y valor, y separando cada par *clave valor* por comas:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'gato': 'chat', 'perro': 'chien', 'caballo': 'cheval'}\n",
+      "{'jefe': 5551234567, 'Suzy': 22657854310}\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dictionary = {\"gato\": \"chat\", \"perro\": \"chien\", \"caballo\": \"cheval\"}\n",
+    "phone_numbers = {'jefe': 5551234567, 'Suzy': 22657854310}\n",
+    "empty_dictionary = {}\n",
+    "\n",
+    "print(dictionary)\n",
+    "print(phone_numbers)\n",
+    "print(empty_dictionary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Eso sí, hay algunas **reglas para definir diccionarios:**\n",
+    "\n",
+    "-Cada clave o key **debe ser única**, no podemos tener en un mismo diccionario claves duplicadas, pero sí dos claves distintas pueden tener el mismo valor.\n",
+    "\n",
+    "-Una clave puede tener un valor con un dato de cualquier tipo (enteros, flotantes, cadenas) pero **no puede ser una lista**\n",
+    "\n",
+    "-Un diccionario es una herramienta de un solo sentido, es decir no podemos buscar una clave a partir de su valor.\n",
+    "\n",
+    "-La obtencion de valores de un diccionario es similar a la indexacion, se utilizan corchetes especificando **la clave**, aca es importante aclarar que cuando llamamos a un eleento de un diccionario, el programa nos muestra el **valor** no la clave, la clave funciona simplemente como un índice, por eso no pueden repetire claves.\n",
+    "\n",
+    "-Las claves son sensibles a las mayúsculas y minúsculas.\n",
+    "\n",
+    "\n",
+    "Podemos utilizar los operadores ``in`` y ``not in`` para saber si una clave existe en el diccionario:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat -> gato\n",
+      "león no está en el diccionario\n",
+      "horse -> cheval\n",
+      "chien no está en el diccionario\n"
+     ]
+    }
+   ],
+   "source": [
+    "dictionary = {\"cat\": \"gato\", \"dog\": \"chien\", \"horse\": \"cheval\"}\n",
+    "words = ['cat', 'león', 'horse', 'chien']\n",
+    "\n",
+    "for word in words:\n",
+    "    if word in dictionary:\n",
+    "        print(word, \"->\", dictionary[word])\n",
+    "    else:\n",
+    "        print(word, \"no está en el diccionario\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analicemos éste bucle, tenemos un diccionario y una lista ``words``, el bucle itera sobre ésta, la variable ``word`` va a tomar cada uno de los valores en dicha lista, en el cuerpo del bucle vemos un condicional donde la condicion es que ``word`` este presente en el diccionario como CLAVE, es decir el operador ``in`` solo busca en las claves del diccionario, a ésto solo lo podemos corroborar cuando itera sobre la palabra ``chien`` que sí esta en el diccionario pero no como clave sino como valor, y el oeprador no lo reconoce."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**MÉTODOS Y FUNCIONES DE LOS DICCIONARIOS** \n",
+    "\n",
+    "Como mencionamos al principio, los diccionarios son elementos mutables, existen diversos métodos y funciones integradas para modificar o manipular diccionarios, veremos algunas de las más importantes:\n",
+    "\n",
+    "**Método ``.keys()`` y ``.values()``**: Vimos que en elementos secuenciales como listas y tuplas el bucle ``for`` era muy utilizado, ahora bein, es posible utilizarlo de la misma manera con diccionarios? \n",
+    "\n",
+    "La mentablemente no, los diccionarios no son elementos secuenciales, sin embargo sí existe un método que nos permite adaptar diccionarios a los requerimientos de un bucle ``for``. El primero de ellos es el **método ``.keys()``** que retorna una **lista de todas las claves dentro del diccionario**, de ésta forma nos fácilita el acceso a los elementos de un diccionario, y el método ``.values()`` puede hacer exáctamente lo mismo pero con los valores."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gato -> chat\n",
+      "perro -> chien\n",
+      "caballo -> cheval\n",
+      "['gato', 'perro', 'caballo'] ['chat', 'chien', 'cheval']\n",
+      "['chat', 'chien', 'cheval']\n"
+     ]
+    }
+   ],
+   "source": [
+    "dictionary = {\"gato\": \"chat\", \"perro\": \"chien\", \"caballo\": \"cheval\"}\n",
+    "\n",
+    "for key in dictionary.keys():\n",
+    "    print(key, \"->\", dictionary[key])\n",
+    "\n",
+    "lista_keys = list(dictionary.keys())\n",
+    "\n",
+    "lista_values = list(dictionary.values())\n",
+    "\n",
+    "print(lista_keys, lista_values)\n",
+    "\n",
+    "lista_values2 = []\n",
+    "\n",
+    "for val in dictionary.values():\n",
+    "    lista_values2.append(val)\n",
+    "print(lista_values2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En el código vemos varias formas de crear listas utilizando ya sea bucles o la funcion integrada de python ``list()``.\n",
+    "\n",
+    "Otra forma es utiliznaod el **método ``.items()``** el cual crea una lista de tuplas las cuales contiene cada clave con su respectivo valor:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gato -> chat\n",
+      "perro -> chien\n",
+      "caballo -> cheval\n",
+      "[('a', 'some value'), ('b', [1, 2, 3, 4]), ('c', 'hola')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dictionary = {\"gato\": \"chat\", \"perro\": \"chien\", \"caballo\": \"cheval\"}\n",
+    "\n",
+    "for spanish, french in dictionary.items():\n",
+    "    print(spanish, \"->\", french)\n",
+    "\n",
+    "d1 = {\"a\": \"some value\", \"b\": [1, 2, 3, 4], \"c\": \"hola\"}\n",
+    "listad1 = list(d1.items())\n",
+    "print(listad1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note que en el bucle se crean las dos variables (``spanish y french``) y se va iterando en las tuplas que se crean por el método ``.items()``.\n",
+    "\n",
+    "**MODIFICAR, AGREGAR Y ELIMINAR VALORES**: Al igual que todos los elementos mutables como listas, los diccionarios pueden ser modificados, pero como mencionamos antes, al no ser elementos secuenciales, los diccionarios tienen sus propios métodos, aunque son bastantes parecidos a los de las listas, por lo que si conocemos bien los métodos que se utilizan para listas, los de diccionarios son bastantes intuitivos.\n",
+    "\n",
+    "Para **modificar** el valor de una clave se utiliza el operador ``=``, indicandole en lugar del índice del elemento que queremos modificar, la clave:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'gato': 'minou', 'perro': 'chien', 'caballo': 'cheval'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dictionary = {\"gato\": \"chat\", \"perro\": \"chien\", \"caballo\": \"cheval\"}\n",
+    "\n",
+    "dictionary['gato'] = 'minou'\n",
+    "print(dictionary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Los elementos de un diccionario se pueden **ordenar**, recuerdas que para lístas se utilizaba el método ``.sort()``, bueno aqui utilizamos la **funcion integrada ``sorted()``**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'caballo': 'cheval', 'cisne': 'gygne', 'gato': 'chat', 'pato': 'canard', 'perro': 'chien'}\n",
+      "[('caballo', 'cheval'), ('cisne', 'gygne'), ('gato', 'chat'), ('pato', 'canard'), ('perro', 'chien')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sort_dictionary = dict(sorted(dictionary.items()))\n",
+    "print(sort_dictionary)\n",
+    "\n",
+    "sort_lisd = sorted(dictionary.items())\n",
+    "print(sort_lisd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para **agregar nuevas claves** en un diccionario se utiliza el mésmo método que para cambiar una, solo que debemos tener en cuenta que la clave que agreguemos no exista ya en el diccionario, aunque tambien se puede utilizar el **método ``.update(key: value)``:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'gato': 'minou', 'perro': 'chien', 'caballo': 'cheval', 'cisne': 'gygne'}\n",
+      "{'gato': 'minou', 'perro': 'chien', 'caballo': 'cheval', 'cisne': 'gygne', 'pato': 'canard'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dictionary['cisne'] = 'gygne'\n",
+    "\n",
+    "print(dictionary)\n",
+    "\n",
+    "dictionary.update({\"pato\": \"canard\"})\n",
+    "print(dictionary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para **eliminar una clave** (y por lo tanto su valor) sí se utiliza el mismo método que para listas, con la instruccion ``del``:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'gato': 'chat', 'caballo': 'cheval'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dictionary = {\"gato\": \"chat\", \"perro\": \"chien\", \"caballo\": \"cheval\"}\n",
+    "\n",
+    "del dictionary['perro']\n",
+    "print(dictionary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**RAMA TRY-EXCEPT**\n",
+    "\n",
+    "Algunas veces no encontramos otra forma de escribi un código sin que nos de un error, y éste error frena la ejecucion de todo el programa, sin embargo en python existe una posibilidad de escribir un código con posibilidades de generar un error pero que no detenga el programa, para ello se usan los bloques ``try`` y ``except``, en el bloque ``try`` se escibe el código que puede llegar a resultar en error, como vemos en el ejemplo, si el usuario llega a ingresar *0* el resultado sería un erros porque no podemos dividir 1 por 0, ésto frenaría toda la ejecucion del programa, sin embargo al estar en el bloque ``try`` no se frena, y en el bloque ``except`` se escribe el código que se va a ejecutar sí y solo sí surge un error en el bloque ``try``:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No se que hacer con 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    value = int(input('Ingresa un número natural: '))\n",
+    "    print('El recíproco de', value, 'es', 1/value)        \n",
+    "except:\n",
+    "    print('No se que hacer con', value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "hay formas de volver aun más específico éstos bloques. Si conocemos exáctamente que tipo de error o errores se pueden llegar a generar en el bloque ``try``, podemos poner bloques ``except`` específicos de cada error:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No se que hacer con 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    value = int(input('Ingresa un número natural: '))\n",
+    "    print('El recíproco de', value, 'es', 1/value)        \n",
+    "except ValueError:\n",
+    "    print('No se que hacer con', value)    \n",
+    "except ZeroDivisionError:\n",
+    "    print('La división entre cero no está permitida en nuestro Universo.') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para éste caso, debemos tener en cuenta que las excepciones no pueden ser específicas más de una vez, es decir solo puede haber una excepcion por tipo de error.\n",
+    "\n",
+    "La cantidad de bloques ``except`` que se añadan es ilimitada, podemos añadir tantos bloques como creamos necesarios. Cuando se utilizan exceociones específicas podemos añadir al final una bloque ``except`` anónimo, es decir que ejecuta un código por defecto o ante cualquier tipo de error, pero éste siempre debe ser el último."
    ]
   }
  ],
